# ZheQuant-brain-cpp

./: .gitignore  CMakeLists.txt  ConfigDefault.txt  Configure.txt.in  README.md  main.cpp
src/: CMakeLists.txt  CalculatorManager.cpp  CompareCalculator.cpp  Helper.cpp  MovingAverageCalculator.cpp  MyLibEvHandler.cpp  RateOfReturnCalculator.cpp  Storage.cpp
src/include/: Calculator.h  CalculatorManager.h  CompareCalculator.h  Helper.h  MovingAverageCalculator.h  MyLibEvHandler.h  RateOfReturnCalculator.h  Storage.h  structs.h
test/: CMakeLists.txt  googletest.txt.in  main.cpp
test/include/: UT_MovingAverage.h  UT_Storage.h
